ARM: omap2plus_defconfig: Use ddk-1.17 and preempt by default
We have no use for the earlier ddk versions and need to enable
preempt.

Signed-off-by: Tony Lindgren <tony@atomide.com>

--- a/arch/arm/configs/omap2plus_defconfig
+++ b/arch/arm/configs/omap2plus_defconfig
@@ -3,6 +3,7 @@ CONFIG_SYSVIPC=y
 CONFIG_POSIX_MQUEUE=y
 CONFIG_AUDIT=y
 CONFIG_NO_HZ_IDLE=y
+CONFIG_PREEMPT=y
 CONFIG_HIGH_RES_TIMERS=y
 CONFIG_BSD_PROCESS_ACCT=y
 CONFIG_IKCONFIG=y
@@ -513,7 +514,7 @@ CONFIG_DRM_TI_TPD12S015=m
 CONFIG_SGX=y
 CONFIG_SGX_OMAP=m
 CONFIG_SGX_DRM=y
-CONFIG_PVRSGX_1_14_3699939=y
+CONFIG_PVRSGX_1_17_4948957=y
 CONFIG_FB=y
 CONFIG_FIRMWARE_EDID=y
 CONFIG_FB_MODE_HELPERS=y
