ARM: dts: motorola-mapphone: Free more virtual dma channels
We have maxed out the available 32 virtual dma channels available on
omap4, and for example loading audio can fail with error "Missing dma
channel for stream: 0".

Looking at /sys/kernel/debug/dmaengine/summary, we can free more virtual
dma channels by disabling the unused mcbsp and mcspi instances.

Note that we are disabling the driver IP inside the interconnect target
module, and not disabling the target module. This allows Linux to still
probe and idle the related interconnect target modules for unused devices.

Signed-off-by: Tony Lindgren <tony@atomide.com>

--- a/arch/arm/boot/dts/ti/omap/motorola-mapphone-common.dtsi
+++ b/arch/arm/boot/dts/ti/omap/motorola-mapphone-common.dtsi
@@ -497,6 +497,26 @@
 	};
 };
 
+/*
+ * Disable unused mcbsp and mcspi instances so drivers do not claim the virtual
+ * dma channels unncessarily, they are limited limited to 32 on omap4.
+ */
+&mcbsp4 {
+	status = "disabled";
+};
+
+&mcspi2 {
+	status = "disabled";
+};
+
+&mcspi3 {
+	status = "disabled";
+};
+
+&mcspi4 {
+	status = "disabled";
+};
+
 &cpcap_audio_codec0 {
 	remote-endpoint = <&cpu_dai2>;
 };
