arch: arm: motorola-mapphone-common: update opp to opp-v2

--- a/arch/arm/boot/dts/motorola-mapphone-common.dtsi
+++ b/arch/arm/boot/dts/motorola-mapphone-common.dtsi
@@ -124,6 +124,43 @@
 
 		dais = <&mcbsp2_port>, <&mcbsp3_port>;
 	};
+
+	cpu0_opp_table0: opp-table {
+		compatible = "operating-points-v2-ti-cpu";
+		syscon = <&scm_conf>;
+		opp-shared;
+
+		opp-300000000 {
+			opp-hz = /bits/ 64 <300000000>;
+			opp-microvolt = <1025000 1025000 1025000>;
+		};
+		opp-600000000 {
+			opp-hz = /bits/ 64 <600000000>;
+			opp-microvolt = <1200000 1200000 1200000>;
+		};
+		opp-800000000 {
+			opp-hz = /bits/ 64 <800000000>;
+			opp-microvolt = <1313000 1313000 1313000>;
+		};
+		opp-1008000000 {
+			opp-hz = /bits/ 64 <1008000000>;
+			opp-microvolt = <1375000 1375000 1375000>;
+		};
+		opp-1200000000 {
+			opp-hz = /bits/ 64 <1200000000>;
+			opp-microvolt = <1375000 1375000 1375000>;
+		};
+		opp-1300000000 {
+			opp-hz = /bits/ 64 <1300000000>;
+			opp-microvolt = <1375000 1375000 1375000>;
+			turbo-mode;
+		};
+		opp-1400000000 {
+			opp-hz = /bits/ 64 <1400000000>;
+			opp-microvolt = <1375000 1375000 1375000>;
+			turbo-mode;
+		};
+	};
 };
 
 &cpu_thermal {
@@ -132,21 +169,6 @@
 
 &cpu_alert0 {
         temperature = <80000>; /* millicelsius */
-};
-
-&cpu0 {
-        /*
-	 * Note that the 1.2GiHz mode is enabled for all SoC variants for
-	 * the Motorola Android Linux v3.0.8 based kernel.
-	 */
-        operating-points = <
-	        /* kHz    uV */
-	        300000  1025000
-	        600000  1200000
-	        800000  1313000
-	        1008000 1375000
-		1200000 1375000
-        >;
 };
 
 &dss {
