--- a/arch/arm/boot/dts/omap3-n900.dts
+++ b/arch/arm/boot/dts/omap3-n900.dts
@@ -1173,16 +1173,7 @@
 	status = "disabled";
 };
 
-&cpus {
-	cpu: cpu@0 {
-		operating-points-v2 = <&cpu0_opp_table>;
-
-		clock-latency = <300000>; /* From legacy driver */
-		#cooling-cells = <2>;
-	};
-};
-
-&cpu0_opp_table: opp-table {
+&cpu0_opp_table {
 	compatible = "operating-points-v2-ti-cpu";
 	syscon = <&scm_conf>;
 
