arch: arm: boot: dts: omap443x: also explcity apply the opp table to the second cpu

--- a/arch/arm/boot/dts/omap443x.dtsi
+++ b/arch/arm/boot/dts/omap443x.dtsi
@@ -16,6 +16,13 @@
 			/* cooling options */
 			#cooling-cells = <2>; /* min followed by max */
 		};
+		cpu1: cpu@1 {
+			/* OMAP443x variants OPP50-OPPNT */
+			operating-points-v2 = <&cpu0_opp_table0>;
+
+			/* cooling options */
+			#cooling-cells = <2>; /* min followed by max */
+		};
 	};
 
 	cpu0_opp_table0: opp-table {
