DO NOT USE: make dtbs build for now
Just to get the kernel build to pass, so that I can work on the new
builddeb

--- a/arch/arm/boot/dts/ti/omap/motorola-mapphone-common.dtsi
+++ b/arch/arm/boot/dts/ti/omap/motorola-mapphone-common.dtsi
@@ -254,7 +254,7 @@
 		reg = <0x44>;
 
 		pinctrl-names = "default";
-		pinctrl-0 = <&als_proximity_pins>;
+		//pinctrl-0 = <&als_proximity_pins>;
 
 		interrupt-parent = <&gpio6>;
 		interrupts = <17 IRQ_TYPE_LEVEL_LOW>; /* gpio177 */
