--- a/arch/arm/boot/dts/ti/omap/omap4-xyboard-mz609.dts
+++ b/arch/arm/boot/dts/ti/omap/omap4-xyboard-mz609.dts
@@ -44,3 +44,18 @@
 		};
 	};
 };
+&omap4_pmx_core {
+	/*
+	 * 0x4a1001ce dpm_emu16.safe_mode (gpio_27) ab2, dmtimer8_pwm_evt not in
+	 * use and gpio_27 pin is kept low as per lp8550 documentation.
+	 */
+	backlight_pwm_pin: backlight-pwm-pin {
+		pinctrl-single,pins = <OMAP4_IOPAD(0x1ce, PIN_INPUT_PULLDOWN | MUX_MODE7)>;
+	};
+
+	touchscreen_pins: touchscreen-pins {
+		pinctrl-single,pins =
+			<OMAP4_IOPAD(0x180, PIN_OUTPUT | MUX_MODE3)>,
+			<OMAP4_IOPAD(0x1a0, PIN_INPUT_PULLUP | MUX_MODE3)>;
+	};
+};
